some style updated

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -48,7 +48,7 @@
               id="id-date-1"
               aria-haspopup="true"
               aria-controls="id-datepicker-1">
-        <button class="dateButton" tabindex="-1">
+        <button class="dateButton" >
           <i class="fa fa-calendar-alt fa-2x"></i>
         </button>
       </div>
