dialog function ready

--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -106,7 +106,12 @@
         </tr>
         <tr>
           <th><kbd>Down Arrow</kbd></th>
-          <td>Move the focus to the below date.</td>
+          <td>
+            <ul>
+              <li>Move the focus to the below date if the dialog is open.</li>
+              <li>If the focus is on the input, it will open the dialog</li>
+            </ul>
+          </td>
         </tr>
         <tr>
           <th><kbd>Right Arrow</kbd></th>
