--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2270,8 +2270,10 @@
             <a href="#aria-label" class="property-reference">aria-label</a>.
           </li>
           <li>
-            If it is possible to modify the value of the textbox such that the value is outside of the allowed set of values, the spinbutton element has
-            <a href="#aria-invalid" class="state-reference">aria-invalid</a> set to <code>true</code>.
+            The spinbutton element has
+            <a href="#aria-invalid" class="state-reference">aria-invalid</a> set to <code>true</code>
+            if the value is outside the allowed range.
+            Note that most implementations prevent input of invalid values, but in some scenarios, blocking all invalid input may not be practical.
           </li>
         </ul>
       </section>
