--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -80,6 +80,14 @@
           <tbody class="curr">
           </tbody>
         </table>
+        <div class="dialogButtonGroup">
+          <button class="dialogButton" value="cancel">
+            Cancel
+          </button>
+          <button class="dialogButton" value="ok">
+            OK
+          </button>
+        </div>
       </div>
 
     </div>
