--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -50,7 +50,7 @@
               aria-haspopup="true"
               aria-controls="id-datepicker-1">
 
-        <button class="dateButton" >
+        <button class="dateButton" tabIndex="-1">
           <i class="fa fa-calendar-alt fa-2x"></i>
         </button>
       </div>
