--- a/examples/datepicker/datepicker.html
+++ b/examples/datepicker/datepicker.html
@@ -14,7 +14,6 @@
 <script src="../js/app.js"></script>
 
 <link href="css/datepicker.css" rel="stylesheet">
-<script src="js/main.js" type="text/javascript"></script>
 <script src="js/dateInput.js" type="text/javascript"></script>
 <script src="js/datePickerDay.js" type="text/javascript"></script>
 <script src="js/datepicker.js" type="text/javascript"></script>
@@ -40,54 +39,55 @@
     <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
     <div id="example">
 
-      <div>
+      <div class="datepicker">
         <label for="id-date-1">Date: </label>
 
-        <input class="dateInput"
+        <input class="datepickerInput"
               type="text"
               placeholder="mm/dd/yyyy"
               id="id-date-1"
               aria-haspopup="true"
               aria-controls="id-datepicker-1">
 
-        <button class="dateButton" tabIndex="-1" aria-label="toggle the calendar">
+        <button class="datepickerButton" tabIndex="-1" aria-label="toggle the calendar">
           <i class="fa fa-calendar-alt fa-2x"></i>
         </button>
-      </div>
 
-      <div id="id-datepicker-1" class="datepicker" role="dialog" aria-labelledby="dislogLabel">
+        <div id="id-datepicker-1" class="datepickerDialog" role="dialog" aria-labelledby="dislogLabel">
 
-        <div class="header">
-          <button class="prev-year">&lang;&lang;</button>
-          <button class="prev-month">&lang;</button>
-          <span id="dialogLabel" class="month-year-label"></span>
-          <button class="next-month">&rang;</button>
-          <button class="next-year">&rang;&rang;</button>
+          <div class="header">
+            <button class="prev-year">&lang;&lang;</button>
+            <button class="prev-month">&lang;</button>
+            <span id="dialogLabel" class="month-year-label"></span>
+            <button class="next-month">&rang;</button>
+            <button class="next-year">&rang;&rang;</button>
+          </div>
+  
+          <table class="dates" role="grid">
+            <thead>
+              <tr>
+                <th scope="col" aria-label="Sunday">Su</th>
+                <th scope="col" aria-label="Monday">Mo</th>
+                <th scope="col" aria-label="Tuesday">Tu</th>
+                <th scope="col" aria-label="Wednesday">We</th>
+                <th scope="col" aria-label="Thursday">Th</th>
+                <th scope="col" aria-label="Friday">Fr</th>
+                <th scope="col" aria-label="Saturday">Sa</th>
+              </tr>
+            </thead>
+            <tbody class="curr">
+            </tbody>
+          </table>
+          <div class="dialogButtonGroup">
+            <button class="dialogButton" value="cancel">
+              Cancel
+            </button>
+            <button class="dialogButton" value="ok">
+              OK
+            </button>
+          </div>
         </div>
-
-        <table class="dates" role="grid">
-          <thead>
-            <tr>
-              <th scope="col" aria-label="Sunday">Su</th>
-              <th scope="col" aria-label="Monday">Mo</th>
-              <th scope="col" aria-label="Tuesday">Tu</th>
-              <th scope="col" aria-label="Wednesday">We</th>
-              <th scope="col" aria-label="Thursday">Th</th>
-              <th scope="col" aria-label="Friday">Fr</th>
-              <th scope="col" aria-label="Saturday">Sa</th>
-            </tr>
-          </thead>
-          <tbody class="curr">
-          </tbody>
-        </table>
-        <div class="dialogButtonGroup">
-          <button class="dialogButton" value="cancel">
-            Cancel
-          </button>
-          <button class="dialogButton" value="ok">
-            OK
-          </button>
-        </div>
+  
       </div>
 
     </div>
